# elpio

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dispatcher  LICENSE  LICENSE-docs  Makefile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/crds/: elpiofunction.yaml  elpioservice.yaml  elpiotask.yaml  tenant.yaml
deploy/helm/elpio/: Chart.yaml  values.yaml
deploy/operator/: deployment.yaml  rbac.yaml
deploy/tekton/: buildpacks-pipeline.yaml
deploy/webhook/: webhook.yaml
examples/: hello-keda.yaml  hello.yaml  service-secret-env.yaml  spero-policy.yaml  task-secure-broker.yaml
hack/: apply_headers.py  install-knative.sh  render-cli-svg.py  render-screens.py
src/elpio/: __init__.py  banner.py  cli.py  function.py  k8s.py  status.py  task.py  tenant.py  version.py
src/elpio/api/: __init__.py  app.py  gateway.py
src/elpio/dispatcher/: __init__.py  brokers.py  core.py  main.py
src/elpio/engines/: __init__.py  base.py  keda.py  knative.py
src/elpio/models/: __init__.py  function.py  (+3 more)
tests/: conftest.py
tests/e2e/: kind-config.yaml  test_keda_http_scale_to_zero.py  test_scale_to_zero.py
tests/integration/: test_brokers_integration.py
tests/unit/: test_api.py  test_brokers.py  test_buildpacks_pipeline.py  test_cli.py  test_dispatcher.py  test_function_render.py  test_gateway.py  test_identity.py  test_knative_render.py  test_notify.py  test_operator_common.py  test_operator_metrics.py  test_service_model.py  test_state.py  test_status.py  test_task_render.py  test_tenant_render.py  test_webhook_policy.py
(+26 files in other folders)
