[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elpio"
version = "0.1.0"
description = "Turn any Kubernetes cluster into a private serverless platform (Cloud Run / Functions / Tasks)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joy Ndjama", email = "joy.ndjama@altikva.com" }]
keywords = ["kubernetes", "serverless", "knative", "keda", "operator", "cloud-run", "altikva"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Clustering",
]
dependencies = [
  "kopf>=1.37",
  "kubernetes>=29.0",
  "pydantic>=2.5",
  "click>=8.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# The control-plane HTTP tiers (admission webhook + management API) and OIDC
# auth. Kept out of the core so the operator image stays lean.
server = ["fastapi>=0.110", "uvicorn>=0.27", "pyjwt>=2.8"]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pyjwt>=2.8",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://elpio.io"
Repository = "https://github.com/altikva/elpio"

[project.scripts]
elpio = "elpio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elpio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests that need a live cluster (kind)"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
